Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-87179

qmlformat should not force multiline with arrow functions

XMLWordPrintable

    • 61417ad3525d33c41e7d8423103e876a922d5f8b (qt/qtdeclarative/dev)

      Hi,

      qmlformat does this :

       

      a = () => updateDB(params)
      
      //becomes
      
      a = () => {
          return updateDB(params);
      };

       

      Arrow functions are cool to write small inline code so adding the braces for small expression adds two more line of code (total 3 instead of one) and is less readable than a oneliner.  As a consequence  `return` is added even for oneline which is useless.

       

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            max.goldstein Maximilian Goldstein
            jgirardet Jimmy Gir
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes