tests/auto/qml/qmlformat/data/arrowFunctions.formatted.qml
@@ -1,0 +1,5 @@
+Item {
+    arrow1: (x) => x
+    arrow2: (x) => x + x
+    arrow3: () => x > 3 ? x * x : x
+}
